// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checks that DOM for App is consistent 1`] = `
<div
  className="Card"
>
  <div
    className="App"
  >
    <header
      className="App-header"
    >
      <img
        alt="logo"
        className="App-logo"
        src="Colourwheel.png"
      />
      <h2>
        Team 2: Colour Converter
      </h2>
      <form>
        <button
          className="Launch-Button"
          onClick={[Function]}
        >
          See Project Files! 🚀
        </button>
      </form>
    </header>
  </div>
  <div
    className="App"
  >
    <h1
      data-testid="hex"
    >
      
    </h1>
    <div
      className="Preview"
      data-testid="preview"
      style={
        Object {
          "backgroundColor": "",
        }
      }
    />
    <form>
      <label
        data-testid="r"
      >
        R:
        <input
          data-testid="rInput"
          max="255"
          min="0"
          name="r"
          onChange={[Function]}
          value="0"
        />
      </label>
      <label
        data-testid="g"
      >
        G:
        <input
          data-testid="gInput"
          max="255"
          min="0"
          name="g"
          onChange={[Function]}
          value="0"
        />
      </label>
      <label
        data-testid="b"
      >
        B:
        <input
          data-testid="bInput"
          max="255"
          min="0"
          name="b"
          onChange={[Function]}
          value="0"
        />
      </label>
    </form>
  </div>
</div>
`;

exports[`checks that DOM for Form is consistent 1`] = `
<div
  className="App"
>
  <h1
    data-testid="hex"
  >
    #000000
  </h1>
  <div
    className="Preview"
    data-testid="preview"
    style={
      Object {
        "backgroundColor": "#000000",
      }
    }
  />
  <form>
    <label
      data-testid="r"
    >
      R:
      <input
        data-testid="rInput"
        max="255"
        min="0"
        name="r"
        onChange={[Function]}
        value="0"
      />
    </label>
    <label
      data-testid="g"
    >
      G:
      <input
        data-testid="gInput"
        max="255"
        min="0"
        name="g"
        onChange={[Function]}
        value="0"
      />
    </label>
    <label
      data-testid="b"
    >
      B:
      <input
        data-testid="bInput"
        max="255"
        min="0"
        name="b"
        onChange={[Function]}
        value="0"
      />
    </label>
  </form>
</div>
`;

exports[`checks that DOM for Header is consistent 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <img
      alt="logo"
      className="App-logo"
      src="Colourwheel.png"
    />
    <h2>
      Team 2: Colour Converter
    </h2>
    <form>
      <button
        className="Launch-Button"
        onClick={[Function]}
      >
        See Project Files! 🚀
      </button>
    </form>
  </header>
</div>
`;
